--- a/src/ProjectTemplates/MauiBlazorApp/MauiBlazorApp/wwwroot/index.html
+++ b/src/ProjectTemplates/MauiBlazorApp/MauiBlazorApp/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>$safeprojectname$</title>
+    <title>$ext_safeprojectname$</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
