--- a/src/MauiTemplatesCLI/MauiAppX/wwwroot/index.html
+++ b/src/MauiTemplatesCLI/MauiAppX/wwwroot/index.html
@@ -7,13 +7,56 @@
 	<title>MauiApp1</title>
 	<base href="/" />
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome/css/all.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
 	<link href="MauiApp1.styles.css" rel="stylesheet" />
+	<style>
+		html {
+			height: 100%;
+			width: 100%;
+		}
+
+		body {
+			margin: 0;
+			padding: 0;
+			min-height: 100vh;
+			width: 100%;
+		}
+
+		.app-content {
+			background-color: white;
+			color: black;
+		}
+
+		@media (prefers-color-scheme: dark) {
+			.app-content {
+				background-color: #121212;
+				color: white;
+			}
+		}
+
+		div.splash {
+			height: 100%;
+			width: 100%;
+		}
+
+		.splash .center {
+			margin: 0px;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+	</style>
 </head>
 
-<body>
+<body class="app-content">
 
-	<div id="app">Loading...</div>
+	<div id="app">
+		<div class="splash">
+			<p class="center"><i class="fas fa-circle-notch fa-2x fa-spin"></i></p>
+		</div>
+	</div>
 
 	<div id="blazor-error-ui">
 		An unhandled error has occurred.
