Target platform parameter made as multi-choice and reliability updates

--- a/src/MauiTemplatesCLI/MauiAppX/wwwroot/index.html
+++ b/src/MauiTemplatesCLI/MauiAppX/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>MauiApp1</title>
+	<title>MauiApp.1</title>
 	<base href="/" />
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/font-awesome/css/all.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
-	<link href="MauiApp1.styles.css" rel="stylesheet" />
+	<link href="MauiApp.1.styles.css" rel="stylesheet" />
 	<style>
 		html {
 			height: 100%;
