--- a/src/MauiTemplatesCLI/MauiAppFS/wwwroot/index.html
+++ b/src/MauiTemplatesCLI/MauiAppFS/wwwroot/index.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>MauiApp.1</title>
-	<base href="/" />
-	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/font-awesome/css/all.min.css" />
-	<link href="css/app.css" rel="stylesheet" />
-	<link href="MauiApp.1.styles.css" rel="stylesheet" />
-	<style>
-		html {
-			height: 100%;
-			width: 100%;
-		}
+    <meta charset="utf-8" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <title>SAFE-NAME</title>
+    <base href="/" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome/css/all.min.css" />
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="MauiApp.1.styles.css" rel="stylesheet" />
+    <style>
+        html {
+            height: 100%;
+            width: 100%;
+        }
 
-		body {
-			margin: 0;
-			padding: 0;
-			min-height: 100vh;
-			width: 100%;
-		}
+        body {
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            width: 100%;
+        }
 
-		.app-content {
-			background-color: white;
-			color: black;
-		}
+        .app-content {
+            background-color: white;
+            color: black;
+        }
 
-		@media (prefers-color-scheme: dark) {
-			.app-content {
-				background-color: #121212;
-				color: white;
-			}
-		}
+        @media (prefers-color-scheme: dark) {
+            .app-content {
+                background-color: #121212;
+                color: white;
+            }
+        }
 
-		div.splash {
-			height: 100%;
-			width: 100%;
-		}
+        div.splash {
+            height: 100%;
+            width: 100%;
+        }
 
-		.splash .center {
-			margin: 0px;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-		}
-	</style>
+        .splash .center {
+            margin: 0px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 
 <body class="app-content">
 
-	<div id="app">
-		<div class="splash">
-			<p class="center"><i class="fas fa-circle-notch fa-2x fa-spin"></i></p>
-		</div>
-	</div>
+    <div id="app">
+        <div class="splash">
+            <p class="center"><i class="fas fa-circle-notch fa-2x fa-spin"></i></p>
+        </div>
+    </div>
 
-	<div id="blazor-error-ui">
-		An unhandled error has occurred.
-		<a href="" class="reload">Reload</a>
-		<a class="dismiss">🗙</a>
-	</div>
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
 
-	<script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script src="_framework/blazor.webview.js" autostart="false"></script>
 
 </body>
 
