Templates updated to support .NET MAUI 10 Preview 5 and .NET MAUI 9 SR8 #307

--- a/src/MauiTemplatesCLI/MauiAppCS/Resources/Raw/hybridroot/index.html
+++ b/src/MauiTemplatesCLI/MauiAppCS/Resources/Raw/hybridroot/index.html
@@ -60,7 +60,11 @@
         Messages from .NET: <textarea readonly id="msgFromCS" class="app-content"
             style="margin-top: 5px; padding: 5px; width: 100%; height: 300px;"></textarea>
     </div>
+    <!--#if (Net10OrLater)-->
+    <script src="_framework/hybridwebview.js"></script>
+    <!--#else-->
     <script src="scripts/hwv.js"></script>
+    <!--#endif-->
     <script>
         function addNumbers(num1, num2) {
             return num1 + num2;
